// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractOverview should render contracts-table 1`] = `
<lib-ngneat-host-component>
  <contract-overview>
    <div
      class="spinner-outlet"
    >
    </div>
    <contract-table />
  </contract-overview>
</lib-ngneat-host-component>
`;

exports[`ContractOverview should render error message 1`] = `
<lib-ngneat-host-component>
  <contract-overview>
    <nx-error>
      An error occurred
    </nx-error>
    <div
      class="spinner-outlet"
    >
    </div>
  </contract-overview>
</lib-ngneat-host-component>
`;

exports[`ContractOverview should render loading-spinner 1`] = `
<lib-ngneat-host-component>
  <contract-overview>
    <div
      class="spinner-outlet"
    >
      <nx-spinner
        size="medium"
      />
    </div>
  </contract-overview>
</lib-ngneat-host-component>
`;
